Add SN TECH T3 Gaming Mouse

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -221,3 +221,7 @@ Svg=steelseries-senseiraw.svg
 [SteelSeries Sensei Ten]
 DeviceMatch=usb:1038:1832
 Svg=steelseries-senseiten.svg
+
+[SN Tech T3]
+DeviceMatch=usb:258a:0012
+Svg=sn-tech-t3.svg
