--- a/data/ui/AboutDialog.ui.in
+++ b/data/ui/AboutDialog.ui.in
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.40.0 -->
 <interface domain="piper">
   <requires lib="gtk+" version="3.22"/>
   <object class="GtkAboutDialog" id="about_dialog">
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
     <property name="modal">True</property>
-    <property name="type_hint">normal</property>
-    <property name="program_name">Piper</property>
-    <property name="version" translatable="yes">Version: @version@</property>
+    <property name="type-hint">normal</property>
+    <property name="program-name">Piper</property>
+    <property name="version">Version: @version@</property>
     <property name="website">https://github.com/libratbag/piper</property>
-    <property name="website_label" translatable="yes">Visit Piper on GitHub</property>
-    <property name="translator_credits" translatable="yes">translator-credits</property>
-    <property name="logo_icon_name">org.freedesktop.Piper</property>
-    <property name="license_type">gpl-2-0</property>
+    <property name="website-label" translatable="yes">Visit Piper on GitHub</property>
+    <property name="translator-credits" translatable="yes">translator-credits</property>
+    <property name="logo-icon-name">org.freedesktop.Piper</property>
+    <property name="license-type">gpl-2-0</property>
     <child internal-child="vbox">
       <object class="GtkBox">
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <child internal-child="action_area">
           <object class="GtkButtonBox">
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -27,9 +27,6 @@
           </packing>
         </child>
       </object>
-    </child>
-    <child>
-      <placeholder/>
     </child>
   </object>
 </interface>
