--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -198,6 +198,10 @@ Svg=logitech-mx-ergo.svg
 DeviceMatch=bluetooth:046d:b023;usb:046d:4082
 Svg=logitech-mx-master-3.svg
 
+[Logitech MX Master 3S]
+DeviceMatch=bluetooth:046d:b034
+Svg=logitech-mx-master-3s.svg
+
 [Logitech MX Master 2S]
 DeviceMatch=bluetooth:046d:b019;usb:046d:4069
 Svg=logitech-mx-master-2s.svg
