--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -46,6 +46,10 @@ Svg=logitech-g500.svg
 DeviceMatch=usb:046d:c24e
 Svg=logitech-g500s.svg
 
+[Logitech G502 X Wireless]
+DeviceMatch=usb:046d:c098
+Svg=logitech-g502-x.svg
+
 [Logitech G502 Hero Wireless]
 DeviceMatch=usb:046d:407f;usb:046d:c08d
 Svg=logitech-g502.svg
