--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -237,3 +237,23 @@ Svg=steelseries-senseiten.svg
 [SN Tech T3]
 DeviceMatch=usb:258a:0012
 Svg=sn-tech-t3.svg
+
+[ASUS ROG Gladius II Origin]
+DeviceMatch=usb:0b05:1877
+Svg=asus-generic-8btn.svg
+
+[ASUS ROG Gladius II Origin PNK LTD]
+DeviceMatch=usb:0b05:18cd
+Svg=asus-generic-8btn.svg
+
+[ASUS ROG Keris Wireless]
+DeviceMatch=usb:0b05:195e;usb:0b05:1960
+Svg=asus-generic-8btn-dpibot.svg
+
+[ASUS ROG Strix Carry]
+DeviceMatch=usb:0b05:18b4
+Svg=asus-generic-8btn.svg
+
+[Strix Impact II Wireless]
+DeviceMatch=usb:0b05:1949;usb:0b05:1947
+Svg=asus-generic-8btn-dpibot.svg
