data: fix name to fit libratbag

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -254,6 +254,6 @@ Svg=asus-rog-keris-wireless.svg
 DeviceMatch=usb:0b05:18b4
 Svg=asus-rog-strix-carry.svg
 
-[Strix Impact II Wireless]
+[ASUS ROG Strix Impact II Wireless]
 DeviceMatch=usb:0b05:1949;usb:0b05:1947
 Svg=asus-rog-strix-impact2-wireless.svg
