data: add svg for Logitech G Pro (X) keyboard
Based on logitech-g513.svg

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -166,6 +166,10 @@ Svg=logitech-g-pro-wireless.svg
 DeviceMatch=usb:046d:4093;usb:046d:c094
 Svg=logitech-g-pro-x-wireless-superlight.svg
 
+[Logitech G Pro Keyboard]
+DeviceMatch=usb:046d:c339
+Svg=logitech-g-pro-keyboard.svg
+
 [Logitech M500s]
 DeviceMatch=usb:046d:c093
 Svg=logitech-m500s.svg
