build: add ruff for Python linting
The tests are failing, they will be fixed in subsequent commits.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ env:
       pkg-config gettext appstream
       python3 python-gi-dev python3-lxml python3-evdev
       gir1.2-rsvg-2.0 python3-gi-cairo flake8 gtk-update-icon-cache desktop-file-utils
-  PIP_PACKAGES: meson ninja black
+  PIP_PACKAGES: meson ninja black ruff
 
 jobs:
   build-and-dist:
