--- a/meson.build
+++ b/meson.build
@@ -16,7 +16,7 @@ enable_runtime_dependency_checks = get_option('runtime-dependency-checks')
 
 # Dependencies
 if enable_runtime_dependency_checks
-    ratbagd = find_program('ratbagd', required: true)
+    ratbagd = find_program('ratbagd', required: false)
     ratbagd_required_version='0.17'
 
     if not ratbagd.found()
@@ -31,16 +31,16 @@ if enable_runtime_dependency_checks
     else
         r = run_command(ratbagd, '--version')
         if r.returncode() != 0 or r.stdout().version_compare('<' + ratbagd_required_version)
-        error('''
-        ************************ ERROR *****************************
-        *                 (   )(                                   *
-        *         (\-.     ) (  )    ratbagd found in $PATH is too *
-        *         / _`> .---------.  old and  will  not  work with *
-        * _)     / _)=  |'-------'|  this version of Piper. Please *
-        *(      / _/    |O   O   o|  update libratbag/ratbagd.     *
-        * `-.__(___)_   | o O . o |                                *
-        ************************************************************
-        ''')
+            error('''
+            ************************ ERROR *****************************
+            *                 (   )(                                   *
+            *         (\-.     ) (  )    ratbagd found in $PATH is too *
+            *         / _`> .---------.  old and  will  not  work with *
+            * _)     / _)=  |'-------'|  this version of Piper. Please *
+            *(      / _/    |O   O   o|  update libratbag/ratbagd.     *
+            * `-.__(___)_   | o O . o |                                *
+            ************************************************************
+            ''')
         endif
     endif
 
