data: don't make the appstreamcli tool required
We don't want every builder to have to install this.

--- a/data/meson.build
+++ b/data/meson.build
@@ -46,7 +46,7 @@ appdata = i18n.merge_file(input: appdata,
                           install: true,
                           install_dir: metainfodir)
 
-appstreamcli = find_program('appstreamcli')
+appstreamcli = find_program('appstreamcli', required: false)
 if appstreamcli.found()
   test(
     'validate appdata file',
