asus: add chakram x svg

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -1,3 +1,7 @@
+[ASUS ROG Chakram X]
+DeviceMatch=usb:0b05:1a18;usb:0b05:1a1a
+Svg=asus-rog-chakram-x.svg
+
 [ASUS ROG Gladius II Origin]
 DeviceMatch=usb:0b05:1877
 Svg=asus-rog-gladius2-origin.svg
