Add Support to Logitech G304
Accompanying this pull request https://github.com/libratbag/libratbag/pull/1556

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -46,6 +46,10 @@ Svg=logitech-g303.svg
 DeviceMatch=usb:046d:c080
 Svg=logitech-g303.svg
 
+[Logitech G304]
+DeviceMatch=usb:046d:c53f
+Svg=logitech-g-pro.svg
+
 [Logitech G305]
 DeviceMatch=usb:046d:4074
 Svg=logitech-g-pro.svg
