add glorious model-d svg

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -30,6 +30,10 @@ Svg=asus-rog-strix-impact2-wireless.svg
 DeviceMatch=usb:1ea7:4011
 Svg=fallback.svg
 
+[Glorious Model D]
+DeviceMatch=usb:258a:0033
+Svg=glorious-model-d.svg
+
 [Logitech G102/G103]
 DeviceMatch=usb:046d:c084;usb:046d:c092;usb:046d:c09d
 Svg=logitech-g102-g203.svg
