Add device image for ASUS ROG Keris Wireless AimPoint

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -14,6 +14,10 @@ Svg=asus-rog-gladius2-origin-pink.svg
 DeviceMatch=usb:0b05:195e;usb:0b05:1960
 Svg=asus-rog-keris-wireless.svg
 
+[ASUS ROG Keris Wireless AimPoint]
+DeviceMatch=usb:0b05:1a68
+Svg=asus-rog-keris-wireless-aimpoint.svg
+
 [ASUS ROG Strix Carry]
 DeviceMatch=usb:0b05:18b4
 Svg=asus-rog-strix-carry.svg
