add svg for asus rog harpe wireless

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -10,6 +10,10 @@ Svg=asus-rog-gladius2-origin.svg
 DeviceMatch=usb:0b05:18cd
 Svg=asus-rog-gladius2-origin-pink.svg
 
+[ASUS ROG Harpe Wireless]
+DeviceMatch=usb:0b05:1a92
+Svg=asus-rog-harpe-wireless.svg
+
 [ASUS ROG Keris Wireless]
 DeviceMatch=usb:0b05:195e;usb:0b05:1960
 Svg=asus-rog-keris-wireless.svg
