Add svg for Logitech G705 Mouse

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -146,6 +146,10 @@ Svg=logitech-g703.svg
 DeviceMatch=usb:046d:c090;usb:046d:4086
 Svg=logitech-g703.svg
 
+[Logitech G705]
+DeviceMatch=usb:046d:c096;usb:046d:409d;bluetooth:046d:b02e
+Svg=logitech-g705.svg
+
 [Logitech G815]
 DeviceMatch=usb:046d:c33f
 Svg=logitech-g815.svg
