data: add svg for Glorious Model O/O-

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -42,6 +42,10 @@ Svg=fallback.svg
 DeviceMatch=usb:258a:0033
 Svg=glorious-model-d.svg
 
+[Glorious Model O/O-]
+DeviceMatch=usb:258a:0036
+Svg=glorious-model-o.svg
+
 [Logitech G102/G103]
 DeviceMatch=usb:046d:c084;usb:046d:c092;usb:046d:c09d
 Svg=logitech-g102-g203.svg
