DeviceMatch updated for g502x wireless dongle

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -91,7 +91,7 @@ DeviceMatch=usb:046d:c24e
 Svg=logitech-g500s.svg
 
 [Logitech G502 X Wireless]
-DeviceMatch=usb:046d:c098
+DeviceMatch=usb:046d:c098;usb:046d:c547
 Svg=logitech-g502-x.svg
 
 [Logitech G502 X]
