data: add Logitech MX Anywhere 3B
Update svg-lookup.ini as image isn't showing for the mx 3 anywhere
business

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -214,6 +214,10 @@ Svg=logitech-mx518.svg
 DeviceMatch=usb:046d:c52b;bluetooth:046d:b025
 Svg=logitech-mx-anywhere3.svg
 
+[Logitech MX Anywhere 3B]
+DeviceMatch=bluetooth:046d:b02d
+Svg=logitech-mx-anywhere3.svg
+
 [Logitech MX Anywhere 2]
 DeviceMatch=usb:046d:404a;usb:046d:4072;usb:046d:4063;bluetooth:046d:b013;bluetooth:046d:b018;bluetooth:046d:b01f
 Svg=logitech-mx-anywhere2.svg
