--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -235,7 +235,7 @@ DeviceMatch=bluetooth:046d:b023;usb:046d:4082
 Svg=logitech-mx-master-3.svg
 
 [Logitech MX Master 3S]
-DeviceMatch=bluetooth:046d:b034
+DeviceMatch=bluetooth:046d:b034;usb:046d:C548
 Svg=logitech-mx-master-3s.svg
 
 [Logitech MX Master 2S]
