Added svg for logitech g303 se

--- a/data/svgs/svg-lookup.ini
+++ b/data/svgs/svg-lookup.ini
@@ -62,6 +62,10 @@ Svg=logitech-g303.svg
 DeviceMatch=usb:046d:c080
 Svg=logitech-g303.svg
 
+[Logitech G303 Shroud Edition]
+DeviceMatch=usb:046d:c097
+Svg=logitech-g303-se.svg
+
 [Logitech G305]
 DeviceMatch=usb:046d:4074
 Svg=logitech-g-pro.svg
