data: add developer tag to appdata
Add developer tag to appdata (https://github.com/libratbag/piper/pull/993)

--- a/data/org.freedesktop.Piper.appdata.xml.in.in
+++ b/data/org.freedesktop.Piper.appdata.xml.in.in
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop-application">
   <id>org.freedesktop.Piper</id>
+  <developer id="io.github.libratbag">
+    <name>libratbag developers</name>
+  </developer>
   <metadata_license>FSFAP</metadata_license>
   <project_license>GPL-2.0-or-later</project_license>
   <content_rating type="oars-1.0" />
